src/middle/irgen/snapshots/compiler__middle__irgen__tests__global_variable.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
@x = dso_local global i32 4
@y = dso_local global i32 8
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%load_5 = load i32, ptr @x
%load_6 = load i32, ptr @y
%Add_7 = add i32, %load_5, %load_6
store i32 %Add_7, ptr @x
%load_9 = load i32, ptr @x
store i32 %load_9, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
