src/middle/irgen/snapshots/compiler__middle__irgen__tests__if.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca i32
store i32 1, ptr %alloca_5
%alloca_7 = alloca i32
store i32 2, ptr %alloca_7
br label %cond0

%cond0:
%load_14 = load i32, ptr %alloca_5
%load_15 = load i32, ptr %alloca_7
%icmp_16 = icmp slt i32 %load_14, %load_15
br i1 %icmp_16, label %then1, label %alt2

%then1:
store i32 3, ptr %alloca_5
br label %final3

%alt2:
store i32 4, ptr %alloca_5
br label %final3

%final3:
%load_22 = load i32, ptr %alloca_5
store i32 %load_22, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
