src/middle/irgen/snapshots/compiler__middle__irgen__tests__lazy_eval.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca i32
%call_6 = call i32 @getint()
store i32 %call_6, ptr %alloca_5
%load_10 = load i32, ptr %alloca_5
%icmp_11 = icmp sgt i32 %load_10, 1
br i1 %icmp_11, label %alt0, label %final1

%alt0:
%load_13 = load i32, ptr %alloca_5
%call_14 = call i32 @f(i32 %load_13)
%icmp_15 = icmp ne i32 %call_14, 0
br label %final1

%final1:
%phi_17 = phi i1 [false, %entry], [%icmp_15, %alt0]
store i32 0, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
define i32 @f(i32 x) {
%entry:
%alloca_22 = alloca i32
%alloca_25 = alloca i32
store i32 %x, ptr %alloca_25
%load_27 = load i32, ptr %alloca_25
%call_28 = call void @putint(i32 %load_27)
%load_29 = load i32, ptr %alloca_25
store i32 %load_29, ptr %alloca_22
br label %exit

%exit:
%load_23 = load i32, ptr %alloca_22
ret i32 %load_23


}
