src/middle/irgen/snapshots/compiler__middle__irgen__tests__nested_call.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%call_5 = call i32 @f(i32 1)
%call_6 = call i32 @f(i32 %call_5)
store i32 %call_6, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
define i32 @f(i32 x) {
%entry:
%alloca_11 = alloca i32
%alloca_14 = alloca i32
store i32 %x, ptr %alloca_14
%load_16 = load i32, ptr %alloca_14
%Add_17 = add i32, %load_16, 1
store i32 %Add_17, ptr %alloca_11
br label %exit

%exit:
%load_12 = load i32, ptr %alloca_11
ret i32 %load_12


}
