src/middle/irgen/snapshots/compiler__middle__irgen__tests__number_condition.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca float
store float 5.4, ptr %alloca_5
%alloca_7 = alloca i32
store i32 8, ptr %alloca_7
%alloca_9 = alloca i32
store i32 0, ptr %alloca_9
br label %cond0

%cond0:
%load_16 = load float, ptr %alloca_5
%fcmp_17 = fcmp une float %load_16, 0
br i1 %fcmp_17, label %then1, label %alt2

%then1:
store i32 1, ptr %alloca_9
br label %final3

%alt2:
br label %final3

%final3:
br label %cond4

%cond4:
%load_27 = load i32, ptr %alloca_7
%icmp_28 = icmp ne i32 %load_27, 0
br i1 %icmp_28, label %then5, label %alt6

%then5:
store i32 2, ptr %alloca_9
br label %final7

%alt6:
br label %final7

%final7:
%load_33 = load i32, ptr %alloca_9
store i32 %load_33, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
