src/middle/irgen/snapshots/compiler__middle__irgen__tests__param.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main(i32 arg) {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca i32
store i32 %arg, ptr %alloca_5
%load_7 = load i32, ptr %alloca_5
store i32 %load_7, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
