src/middle/irgen/snapshots/compiler__middle__irgen__tests__putf.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
@format0 = dso_local constant [7 x i32] [i32 120, i32 32, i32 61, i32 32, i32 37, i32 100, i32 0]
define i32 @main() {
%entry:
%alloca_1 = alloca i32
%call_2 = call i32 @getint()
store i32 %call_2, ptr %alloca_1
%getelementptr_4 = getelementptr [7 x i32], ptr @format0, i32 0, i32 0
%load_5 = load i32, ptr %alloca_1
%call_6 = call void @putf(i32* %getelementptr_4, i32 %load_5)
ret i32 0


}
